# server/Api/Dto/AuthDto.cs
@@ -1,0 +1,6 @@
+﻿namespace api.Dto;
+
+public record AuthDto(string Username, string Password)
+{
+    
+}
