# server/Api/Dto/CreateRoomDto.cs
@@ -1,0 +1,6 @@
+﻿namespace api.Dto;
+
+public record CreateRoomDto(string RoomName)
+{
+    
+}
