# server/Api/Service/JwtService.cs
@@ -1,0 +1,34 @@
+﻿using System.IdentityModel.Tokens.Jwt;
+using System.Security.Claims;
+using Microsoft.IdentityModel.Tokens;
+using System.Text;
+
+public class JwtService
+{
+    private readonly string _key;
+
+    public JwtService(IConfiguration config)
+    {
+        _key = config["Jwt:Key"] 
+               ?? throw new Exception("JWT key missing");
+    }
+
+    public string GenerateToken(string username)
+    {
+        var claims = new[]
+        {
+            new Claim(ClaimTypes.Name, username)
+        };
+
+        var key = new SymmetricSecurityKey(Encoding.UTF8.GetBytes(_key));
+        var creds = new SigningCredentials(key, SecurityAlgorithms.HmacSha256);
+
+        var token = new JwtSecurityToken(
+            claims: claims,
+            expires: DateTime.UtcNow.AddHours(2),
+            signingCredentials: creds
+        );
+
+        return new JwtSecurityTokenHandler().WriteToken(token);
+    }
+}
